--- a/package.json
+++ b/package.json
@@ -26,19 +26,21 @@
         "url": "https://github.com/ibayub/ibrahimayub.git"
     },
     "dependencies": {
-        "bootstrap": "4.1.1",
-        "font-awesome": "4.7.0",
+        "bootstrap": "^4.1.3",
+        "browser-sync": "^2.26.3",
+        "font-awesome": "^4.7.0",
+        "gulp": "^3.9.1",
+        "gulp-clean-css": "^4.0.0",
+        "gulp-header": "^2.0.5",
         "gulp-install": "^1.1.0",
-        "jquery": "3.3.1",
-        "jquery.easing": "^1.4.1"
+        "gulp-rename": "^1.4.0",
+        "gulp-sass": "^4.0.2",
+        "gulp-uglify": "^3.0.1",
+        "jquery": "^3.3.1",
+        "jquery.easing": "^1.4.1",
+        "popper.js": "^1.14.6"
     },
     "devDependencies": {
-        "browser-sync": "2.24.5",
-        "gulp": "^3.9.1",
-        "gulp-clean-css": "3.9.4",
-        "gulp-header": "2.0.5",
-        "gulp-rename": "1.3.0",
-        "gulp-sass": "4.0.1",
-        "gulp-uglify": "3.0.0"
+        "gulp-util": "^3.0.8"
     }
 }
